# publications_angular

./: .gitignore  .stylelintrc.json  404error.css  404error.html  README.md  angular.json  nx.json  package-lock.json  package.json  project.json  requirements.txt  server.ts  setup.py  tsconfig.app.json  tsconfig.json
backend/: maze_solver.py  pyproject.toml
backend/api/: routes.py
backend/rust/: Cargo.toml  pyproject.toml
backend/rust/src/: lib.rs  maze_utils.rs
backend/solver/: maze_solver.py
oeuvre_angular.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: main.server.ts  styles.scss
src/app/: _bootstrap-imports.scss  app.component.html  app.component.scss  app.component.ts
src/app/hex-maze/: hex-maze.component.html  hex-maze.component.scss  hex-maze.component.spec.ts  hex-maze.component.ts  maze-api.service.ts  maze-generator.service.ts  maze-preload.worker.ts  maze-solver.service.ts  maze-worker.worker.ts
src/app/modal/: modal.component.html  modal.component.scss  modal.component.ts
