[package]
name = "maze-utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "maze_util_lib"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-macros = "0.23.4"